--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:20.1.0'
     implementation 'com.google.firebase:firebase-database:20.0.3'
 
+implementation 'com.google.firebase:firebase-storage:20.0.1'
+
     implementation 'com.google.android.material:material:1.2.0'
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
